# tascam-gtk

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  de.paraair.tascamgtk.gschema.xml  test1.xml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
data/: tascam-gtk.css  tascamgtk.desktop
src/: OAlsa.cpp  OAlsa.h  OComp.cpp  OComp.h  OConfig.cpp  OConfig.h  ODial.cpp  ODial.h  ODspLayout.cpp  ODspLayout.h  OEq.cpp  OEq.h  OFader.cpp  OFader.h  OMainWnd.cpp  OMainWnd.h  OMaster.cpp  OMaster.h  OMeter.cpp  OMeter.h  OMeterWorker.cpp  OMeterWorker.h  OOscDialog.cpp  OOscDialog.h  OPrefDialog.cpp  OPrefDialog.h  ORoute.cpp  ORoute.h  OStripLayout.cpp  OStripLayout.h  OTypes.h  main.cpp  tascam-gtk.css  tascam-gtk.glade
